--- a/k8s/sql.yaml
+++ b/k8s/sql.yaml
@@ -1,4 +1,3 @@
-# Database Service
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,18 +6,22 @@ metadata:
   labels:
     app: db-master
 spec:
+  clusterIP: None
+  #By setting this field, a DNS record is created for each Pod, whether the Pod is ready or not
+  publishNotReadyAddresses: true
   selector:
     app: db-master
   ports:
     - port: 3306
 ---
-# Database Deployment
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: db-master
   namespace: default
 spec:
+  #The name of the headless Service that governs this StatefulSet.
+  serviceName: db-master
   selector:
     matchLabels:
       app: db-master
@@ -27,45 +30,45 @@ spec:
       labels:
         app: db-master
     spec:
-      containers:
-        # Database
-        - name: db-master
-          image: mysql:5.7
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                configMapKeyRef:
-                  name: config-food
-                  key: DATABASE_ROOT_PASSWORD
-            - name: MYSQL_DATABASE
-              valueFrom:
-                configMapKeyRef:
-                  name: config-food
-                  key: DATABASE
-            - name: MYSQL_USER
-              valueFrom:
-                configMapKeyRef:
-                  name: config-food
-                  key: DATABASE_USER
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                configMapKeyRef:
-                  name: config-food
-                  key: DATABASE_PASSWORD 
-            - name: MYSQL_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: config-food
-                  key: DATABASE_PORT      
-          ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: our-food-persistent-storage-pvc
-              mountPath: /var/lib/mysql
       volumes:
+      - name: our-food-persistent-storage-pvc
+        persistentVolumeClaim:
+          claimName: our-food-persistent-storage-pvc
+      containers:
+      - name: db-master
+        image: mysql:5.7
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            valueFrom:
+              configMapKeyRef:
+                name: config-food
+                key: DATABASE_ROOT_PASSWORD
+          - name: MYSQL_DATABASE
+            valueFrom:
+              configMapKeyRef:
+                name: config-food
+                key: DATABASE
+          - name: MYSQL_USER
+            valueFrom:
+              configMapKeyRef:
+                name: config-food
+                key: DATABASE_USER
+          - name: MYSQL_PASSWORD
+            valueFrom:
+              configMapKeyRef:
+                name: config-food
+                key: DATABASE_PASSWORD 
+          - name: MYSQL_PORT
+            valueFrom:
+              configMapKeyRef:
+                name: config-food
+                key: DATABASE_PORT      
+        ports:
+          - containerPort: 3306
+        volumeMounts:
           - name: our-food-persistent-storage-pvc
-            persistentVolumeClaim:
-              claimName: our-food-persistent-storage-pvc
+            mountPath: /var/lib/mysql
+
 
 ---
 #PV
@@ -83,6 +86,7 @@ spec:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
+    - ReadOnlyMany
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
     namespace: default
@@ -100,9 +104,10 @@ metadata:
   name: our-food-persistent-storage-pvc
   namespace: default
 spec:
-  storageClassName: "" # Empty string must be explicitly set otherwise default StorageClass will be set
+  storageClassName: "" 
   accessModes: 
     - ReadWriteOnce
+    - ReadOnlyMany
   volumeName: our-food-persistent-storage-pv
   resources: 
     requests: 
